Fix dark mode for awesome lists

--- a/styles/global.css
+++ b/styles/global.css
@@ -144,6 +144,15 @@ hr {
   margin: 2em auto;
 }
 
+table {
+  border-collapse: collapse;
+}
+
+table td, th {
+  border: 1px solid #dfe2e5;
+  padding: 5px 12px;
+}
+
 footer {
   color: #757575;
   background: #f5f5f5;
@@ -154,6 +163,10 @@ footer {
 main {
   min-height: calc(100vh - 250px);
   padding: 0px 1rem;
+}
+
+img[align="right"] {
+  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -184,5 +197,13 @@ main {
 
   article img {
     filter: brightness(0.8);
+  }
+
+  img[width="16"] {
+    filter: invert(0.8);
+  }
+
+  table td, th {
+    border-color: #303830;
   }
 }
